tests/ui/error-codes/E0069.stderr
error[E0069]: `return;` in a function whose return type is not `()`
  --> $DIR/E0069.rs:2:5
   |
LL | fn foo() -> u8 {
   |             -- expected `u8` because of this return type
LL |     return;
   |     ^^^^^^ return type is not `()`
   |
help: give the `return` a value of the expected type
   |
LL |     return 42;
   |            ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0069`.
